adding fontawesome and bootstrap cdn

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,22 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- font-awesome and bootstrap cdn -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      crossorigin
+    ></script>
+    <!-- font-awesome and bootstrap cdn -->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
