--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,6 +40,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Google Signup/signin script  -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <title>React App</title>
   </head>
   <body>
