--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,7 +41,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Google Signup/signin script  -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
     <title>React App</title>
   </head>
   <body>
