refactoring the simple boostrap navbar to a react boostrap navbar

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon"  type="image/png" href="" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -25,9 +25,9 @@
     ></script>
     <!-- font-awesome and bootstrap cdn -->
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
    
-    <title>React App</title>
+    <title>Mern Authentication</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
