adding the ShoppingList component and fixing carresoul style

--- a/client/index.html
+++ b/client/index.html
@@ -11,10 +11,11 @@
     />
 
     <title>Mern Authentication</title>
+    
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
