adding a logo to the site

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/png" href="" />
+    <link rel="icon" type="image/png" href="./public/favicon.ico" />
+
+ 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,11 +12,11 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Mern Authentication</title>
+    <title>ZiwiShop</title>
     
   </head>
   <body>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
      <script type="module" src="/src/main.jsx"></script>
   </body>
