--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon"   type="image/x-icon" href="./src/assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
 
- 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -13,11 +12,14 @@
     />
 
     <title>ZiwiShop</title>
-    
+    <meta
+      name="google-site-verification"
+      content="CXAGcEA0bz6LulXE9Ecdmo31qTLrpauF498-P_6CE6c"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-     <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
